...
  Scaffold(
      topBar = { CustomTopAppBar(navController = navController, title = "Flight History") },
      bottomBar = { AdminBottomBar(navController = navController) }) { padding ->
        Column(modifier = Modifier.fillMaxSize().padding(padding)) {
          if (allFlights.isEmpty()) {
            Text(
                modifier = Modifier.padding(padding).testTag("No Flight"),
                text = "No flights available")
          } else {
            var beginDate: LocalDate? by remember { mutableStateOf(null) }
            var endDate: LocalDate? by remember { mutableStateOf(null) }
            var beginFlightTime: Date? by remember { mutableStateOf(null) }
            var endFlightTime: Date? by remember { mutableStateOf(null) }
...
            Row(modifier = Modifier.padding(16.dp), verticalAlignment = Alignment.Top) {
              FlightSearchBar(
                  modifier = Modifier.fillMaxWidth().weight(3f),
                  onSearch = { /* TODO search for flights by location name */},
                  results = allFlights)
              IconButton(
                  modifier = Modifier.testTag("Filter Button"),
                  onClick = { showFilters = !showFilters },
                  content = {
                    Icon(
                        modifier = Modifier.padding(top = 16.dp),
                        painter = painterResource(id = R.drawable.baseline_filter_list_alt_24),
                        contentDescription = "Filters")
...
  var beginDate: LocalDate? by remember { mutableStateOf(null) }
  var endDate: LocalDate? by remember { mutableStateOf(null) }
  var beginFlightTime: Date? by remember { mutableStateOf(null) }
  var endFlightTime: Date? by remember { mutableStateOf(null) }
  var flightType: FlightType? by remember { mutableStateOf(null) }
  AlertDialog(
      modifier = Modifier.fillMaxWidth().testTag("Filter Menu"),
      onDismissRequest = onDismissRequest,
      title = { Text("Filters") },
      text = {
        Column(Modifier.fillMaxWidth()) {
          if (showRangeDatePicker) {
            AlertDialog(
...
fun DateRangeSelector(onDone: (LocalDate, LocalDate) -> Unit) {
  val state = rememberDateRangePickerState()
  var beginDate: LocalDate? = null
  var endDate: LocalDate? = null
  DateRangePicker(
      state,
      modifier = Modifier.testTag("Date Range Selector"),
      dateFormatter = DatePickerFormatter("yy MM dd", "yy MM dd", "yy MM dd"),
      dateValidator = dateValidator(),
      title = {
        Text(text = "Select date range to assign the chart", modifier = Modifier.padding(16.dp))
      },
      headline = {
...
@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun FlightSearchBar(modifier: Modifier, onSearch: (String) -> Unit, results: List<FinishedFlight>) {
  var query by remember { mutableStateOf("") }
  var active by rememberSaveable { mutableStateOf(false) }
  SearchBar(
      modifier = modifier.testTag("Search Bar"),
      query = query,
      onQueryChange = { query = it },
      onSearch = {
        onSearch(it)
        active = false
      },
...
